--- a/notes.tex
+++ b/notes.tex
@@ -518,6 +518,30 @@ The answer is obviously intuitively \begin{align*}
     ax+by&=c
 \end{align*} for some nonnegative integers $x,y$. We want to find the largest $c$ such that there are no nonnegative integer solutions to this equation. Also, what are all of the values of $c$ such that there are no nonnegative integer solutions to this equation?
 
-\underline{Example:} Suppose in some fucked up version of football the only ways to score are 
+\underline{Example:} Suppose in some fucked up version of football the only ways to score are with 3 or 7 points. What scores can be achieved?
+
+Remember you just need 3 in a row that can be achieved and everything after is doable. 
+
+\begin{align*}
+    \begin{tabular}{c|c}
+        Score & Achievable? \\
+        \hline
+        0 & Yes \\
+        1 & No \\
+        2 & No \\
+        3 & Yes \\
+        4 & No \\
+        5 & No \\
+        6 & Yes \\
+        7 & Yes \\
+        8 & No \\
+        9 & Yes \\
+        10 & Yes \\
+        11 & No \\
+        12 & Yes \\
+        13 & Yes \\
+        14 & Yes \\
+    \end{tabular}
+\end{align*}and so on. We can see that the largest score that cannot be achieved is 11, and all scores greater than 11 can be achieved.
 
 \end{document}
