--- a/notes.tex
+++ b/notes.tex
@@ -552,21 +552,15 @@ Remember you just need 3 in a row that can be achieved and everything after is d
 
 \textbf{Proposition (3.3):} Suppose $a>1, b>1$ are coprime. Then there are no nonnegative integers $x,y$ such that $ax+by=ab-a-b$. 
 
-\textbf{Proof:} (This is my proof) Let $d=\gcd(a,b)$. Since $a,b$ are coprime, $d=1$. Thus, by the extended euclidean algorithm, there exist integers $x_0,y_0$ such that $ax_0+by_0=1$. Multiplying both sides by $ab-a-b$ gives \begin{align*}
-    (ab-a-b)ax_0 + (ab-a-b)by_0 &= ab - a - b\\
-    a(x_0(ab-a-b)) + b(y_0(ab-a-b)) &= ab - a - b
-\end{align*}
-Thus, $(x_0(ab-a-b), y_0(ab-a-b))$ is an integer solution to $ax+by=ab-a-b$. Here, we will establish a contradiction.
+\underline{Note:} The general idea behind this proof is that when you plug in any arbitrary integer solution to $ax+by=ab-a-b$, you get that $ax_0+by_0=1$. Since $a,b>1$, this forces $x_0,y_0$ to be nonnegative and sum to at most 1, none of which can satisfy the equation.
 
-Suppose on the contrary both are positive. Note that if $x_0(ab-a-b)\geq 0$, then $x_0\geq 0$ since $ab-a-b>0$ for $a,b>1$. Similarly, if $y_0(ab-a-b)\geq 0$, then $y_0\geq 0$. We thus have that $ax_0+by_0\geq 0$. 
+\textbf{Proof:} Since $a,b$ are coprime, there exist integers by a previous theorem that $ax_0+by_0=1$. 
 
-Note here that $x_0, y_0$ are forced to sum to at most 1 since if $x_0+y_0>1\implies x_0+y_0\geq 2$, then $ax_0+by_0\geq 2a+2b>1$. Thus, $0\leq x_0+y_0\leq 1$. By integer properties, this means that either $x_0=0,y_0=0$ or one of them is 1 and the other is 0. 
+We know that $(ab-a-b)x_0,(ab-a-b)y_0$ is a solution to $ax+by=ab-a-b$. Since $a,b>1, ab-a-b>0$, and so for both to be positive we must have $x_0,y_0\geq 0$. 
 
-Then, if $x_0=0,y_0=0$, then $ax_0+by_0=0\neq 1$. If $x_0=1,y_0=0$, then $ax_0+by_0=a>1$. If $x_0=0,y_0=1$, then $ax_0+by_0=b>1$. But we need it to be identically 1, a contradiction. 
+Thus, $ax_0+by_0\geq 0$. However, since $x_0,y_0$ are integers, they must sum to at most 1, otherwise $ax_0+by_0\geq 2a+2b>1$. Thus, $0\leq x_0+y_0\leq 1$. By integer properties, this means that either $x_0=0,y_0=0$ or one of them is 1 and the other is 0. 
 
-Thus, there are no integer solutions to $ax+by=ab-a-b$ where both are positive. \qed
-
-\^ The general idea behind this proof is that when you plug in any arbitrary integer solution to $ax+by=ab-a-b$, you get that $ax_0+by_0=1$. Since $a,b>1$, this forces $x_0,y_0$ to be nonnegative and sum to at most 1, none of which can satisfy the equation.
+Then, if $x_0=0,y_0=0$, then $ax_0+by_0=0\neq 1$. If $x_0=1,y_0=0$, then $ax_0+by_0=a>1$. If $x_0=0,y_0=1$, then $ax_0+by_0=b>1$. But we need it to be identically 1 by assumption, a contradiction.\qed
 
 \begin{aside}
 The professor gives a proof that requires memorizing some answer for $x_0,y_0$, which is why I don't like it and derived my own. 
