more changes to proof

--- a/notes.tex
+++ b/notes.tex
@@ -563,7 +563,7 @@ Thus, $ax_0+by_0\geq 0$. However, since $x_0,y_0$ are integers, they must sum to
 Then, if $x_0=0,y_0=0$, then $ax_0+by_0=0\neq 1$. If $x_0=1,y_0=0$, then $ax_0+by_0=a>1$. If $x_0=0,y_0=1$, then $ax_0+by_0=b>1$. But we need it to be identically 1 by assumption, a contradiction.\qed
 
 \begin{aside}
-The professor gives a proof that requires memorizing some answer for $x_0,y_0$, which is why I don't like it and derived my own. 
+The professor gives a proof that requires memorizing some answer for $x_0,y_0$, which is why I derived my own. 
 
 \textbf{Proof:} (by the professor) Consider the Diophantine Equation \begin{align*}
     ax+by=ab-a-b
@@ -573,7 +573,7 @@ The professor gives a proof that requires memorizing some answer for $x_0,y_0$, 
 \end{align*}
 Thus, the general solution of the Diophantine Equation is $x=-1+bt,y=a-1-at$ for some integer $t$. 
 
-WLOG (this must be briefly justified in reality), suppose $(x,y)$ is a solution such that $x\geq 0$. Since $x\geq 0$, we have that $-1+bt\geq 0$. This implies that $t>0$, an integer, so $t\geq 1$. Then, since $y=a-1-at$, we have that $y\leq a-1-a=-1<0$. Thus, if $x\geq 0$, then $y<0$. Similarly, if $y\geq 0$, then $x<0$. Thus, there are no nonnegative integer solutions to the equation. \qed
+WLOG, suppose $(x,y)$ is a solution such that $x\geq 0$. Since $x\geq 0$, we have that $-1+bt\geq 0$. This implies that $t>0$, an integer, so $t\geq 1$. Then, since $y=a-1-at$, we have that $y\leq a-1-a=-1<0$. Thus, if $x\geq 0$, then $y<0$. Similarly, if $y\geq 0$, then $x<0$. Thus, there are no nonnegative integer solutions to the equation. \qed
 \end{aside}
 
 \end{document}
