--- a/notes.tex
+++ b/notes.tex
@@ -650,4 +650,68 @@ Next, we show that if $e$ is any common divisor of $a$ and $b$, then $e|d$. Sinc
 
 \underline{Remark:} Let $d=\gcd(a,b)$. 
 
+\section{Lecture 10}
+
+\underline{Induction:} Let $P(n)$ be a statement about a positive integer $n$. For instance, $n$ is a product of primes. Then, if $P(1)$ is true, and for all $n\geq 1$, if $P(n)$ is true, then $P(n+1)$ is true, then $P(n)$ is true for all positive integers $n$.
+
+The induction scheme expressed in the above is called weak induction. There is also strong induction, which states that if $P(1)$ is true, and for all $n\geq 1$, if $P(1), P(2), \ldots, P(n)$ are all true, then $P(n+1)$ is true, then $P(n)$ is true for all positive integers $n$.
+
+Note that this means that for strong induction, we only have to prove $n=1$, but we can \textit{assume} that $P(1), P(2), \ldots, P(n)$ are all true to prove $P(n+1)$. For weak induction, we have to prove $n=1$ and then for each $n\geq 1$, we have to prove that if $P(n)$ is true, then $P(n+1)$ is true. Thus, strong induction is often easier to use than weak induction. 
+
+\begin{aside}
+I think we are allowed to do so because of the well-ordering principle, which states that every nonempty subset of the positive integers has a least element. If there is some $n$ such that $P(n)$ is false, then there is a least such $n$. Since $P(1)$ is true, $n>1$. Since $n$ is the least such integer, $P(1), P(2), \ldots, P(n-1)$ are all true. Thus, by the strong induction hypothesis, $P(n)$ is true, a contradiction. Thus, there are no such integers $n$ such that $P(n)$ is false, and so $P(n)$ is true for all positive integers $n$.
+\end{aside}
+
+Additionally, we can express them from a logic perspective:\begin{itemize}
+    \item $P(1) \wedge \forall n\geq 1, P(n)\rightarrow P(n+1) \rightarrow \forall n\geq 1, P(n)$
+    \item $P(1) \wedge \forall n\geq 1, (P(1)\wedge P(2)\wedge \cdots \wedge P(n))\rightarrow P(n+1) \rightarrow \forall n\geq 1, P(n)$
+\end{itemize}
+
+\underline{Example:} Let's prove that $1+3+5+\dots+(2n-1)=n^2$ for all $n\geq 1$. That is, \begin{align*}
+    \sum_{k=1}^n (2k-1) = n^2
+\end{align*}
+
+\textbf{Proof:} We will use weak induction. For the base case, $n=1$, we have $1=1^2$, so the base case holds. Now, suppose that for some $n\geq 1$, we have $\sum_{k=1}^n (2k-1) = n^2$. Then, \begin{align*}
+    \sum_{k=1}^{n+1} (2k-1) &= \sum_{k=1}^n (2k-1) + (2(n+1)-1) \\
+                             &= n^2 + 2n + 1 \\
+                             &= (n+1)^2
+\end{align*}Thus, by the principle of weak induction, we have that $\sum_{k=1}^n (2k-1) = n^2$ for all $n\geq 1$. \
+
+\underline{Example:} Prove that $n!\geq n\cdot 2^n$ for all $n\geq 6$. 
+
+\textbf{Proof:} By induction, \begin{itemize}
+    \item \underline{Base:} $n=6$, $6!=720\geq 6\cdot 2^6=384$, so the base case holds.
+    \item \underline{Induction Step:} Suppose that for some $n\geq 6$, we have $n!\geq n\cdot 2^n$. Then, \begin{align*}
+        (n+1)! &= (n+1)n! \\
+               &\geq (n+1)n\cdot 2^n \\
+               &\geq (n+1)\cdot 2^{n+1}
+    \end{align*}Thus, by the principle of weak induction, we have that $n!\geq n\cdot 2^n$ for all $n\geq 6$. \qed
+\end{itemize}
+
+\underline{Example:} Prove that $3|(n^3-n)$ for all $n\geq 0$
+
+\textbf{Proof:} By induction, \begin{itemize}
+    \item \underline{Base:} $n=0$, $3|0^3-0=0$, so the base case holds.
+    \item \underline{Induction Step:} Suppose that for some $n\geq 0$, we have $3|(n^3-n)$. Then, \begin{align*}
+        (n+1)^3-(n+1) &= n^3 + 3n^2 + 3n + 1 - n - 1 \\
+                      &= n^3 - n + 3n^2 + 3n \\
+                      &= (n^3 - n) + 3(n^2 + n)
+    \end{align*}Since $3|(n^3-n)$ by the induction hypothesis, and $3|(3(n^2+n))$ by bilinearity of divisibility, it follows that $3|((n^3-n) + 3(n^2+n))$. Thus, by the principle of weak induction, we have that $3|(n^3-n)$ for all $n\geq 0$. \qed
+\end{itemize}
+
+\underline{Note:} Replace 3 with any prime $p$ to get that $p|(n^p-n)$ for all $n\geq 0$. This is a special case of Fermat's Little Theorem, which states that if $p$ is prime and $a$ is an integer not divisible by $p$, then $a^{p-1}\equiv 1 \mod p$.
+
+\textbf{Lemma (4.3):} Every integer $n\geq 2$ can be written as a product of primes \begin{align*}
+    n=p_1p_2\cdots p_k
+\end{align*}
+
+\textbf{Proof:} We will use strong induction on $n$.\begin{itemize}
+    \item \underline{Base:} For $n=2$, $2=2$ is a product of primes, so the base case holds.
+    \item \underline{Inductive Step:} Now assume every integer $k$ with $2\leq k\leq n$ can be written as a product of primes. We want to show that $n+1$ can be written as a product of primes. If $n+1$ is prime, then we are done. If $n+1$ is composite, then there exist integers $a,b$ such that $2\leq a,b\leq n$ and $n+1=ab$. By the induction hypothesis, we can write $a=p_1p_2\cdots p_k$ and $b=q_1q_2\cdots q_m$ for some primes $p_i,q_j$. Thus, \begin{align*}
+    n+1 &= ab \\
+        &= (p_1p_2\cdots p_k)(q_1q_2\cdots q_m) \\
+        &= p_1p_2\cdots p_k q_1q_2\cdots q_m
+\end{align*}which is a product of primes. Thus, by the principle of strong induction, every integer $n\geq 2$ can be written as a product of primes. \qed
+\end{itemize}
+
 \end{document}
